--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "node scripts/serve.js",
     "test": "node scripts/run-tests.js"
   }
 }
